# ITMO-algo

./: .gitignore  README.md
1_Sortings_Heap_BinSearch/rust_solutions/: Cargo.toml
1_Sortings_Heap_BinSearch/rust_solutions/src/: A.rs  B.rs  C.rs  D.rs  E.rs  F.rs  G.rs  H.rs  I.rs  J.rs  K.rs  L.rs  M.rs  scanner_test.rs
2_Stacks_Queues_DSU/lab_2_rust/: Cargo.toml
2_Stacks_Queues_DSU/lab_2_rust/src/: A.rs  B.rs  C.rs  D.rs  D_dequeue.rs  E.rs  F.rs  G.rs  H.rs
dfs_mst/: .gitignore  Cargo.toml  build.rs
dfs_mst/src/: dfs.rs  dsu.rs  graph.rs  lib.rs  main.rs  mst.rs  sat.rs  scanner.rs
dynamic_programming/: Cargo.toml
dynamic_programming/src/: A.rs  B.rs  C.rs  D.rs  E.rs  F.rs  G.rs  H.rs  J.rs  K.rs
number_theory/: Cargo.toml  build.rs
number_theory/src/: lib.rs
segment-tree/: Cargo.toml
segment-tree/src/: A.rs
segment-tree/src/segment_tree/: common_operations.rs  engine.rs  mass_read_segment_tree.rs  mass_read_write_segment_tree.rs  mass_write_segment_tree.rs  mod.rs  operations.rs  testing_queries.rs
string_queries/: Cargo.toml  build.rs
string_queries/src/: hash.rs  lib.rs  string_func.rs
