[package]
name = "dynamic_programming"
version = "0.1.0"
authors = ["donRumata <donrumata03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "a"
path = "src/A.rs"

[[bin]]
name = "b"
path = "src/B.rs"

[[bin]]
name = "с"
path = "src/C.rs"

[[bin]]
name = "d"
path = "src/D.rs"

[[bin]]
name = "e"
path = "src/E.rs"



[dependencies]
itertools = "0.10.3"
