[package]
name = "rust_solutions"
version = "0.1.0"
authors = ["donRumata <donrumata03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "scanner_test"
path = "src/scanner_test.rs"


[[bin]]
name = "A"
path = "src/A.rs"

[[bin]]
name = "B"
path = "src/B.rs"

[[bin]]
name = "C"
path = "src/C.rs"




[dependencies]
num = "0.4"