[package]
name = "rust_solutions"
version = "0.1.0"
authors = ["donRumata <donrumata03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "scanner_test"
path = "src/scanner_test.rs"


[[bin]]
name = "A"
path = "src/A.rs"

[[bin]]
name = "B"
path = "src/B.rs"

[[bin]]
name = "C"
path = "src/C.rs"

[[bin]]
name = "D"
path = "src/D.rs"

[[bin]]
name = "E"
path = "src/E.rs"

[[bin]]
name = "F"
path = "src/F.rs"

[[bin]]
name = "G"
path = "src/G.rs"

[[bin]]
name = "H"
path = "src/H.rs"

[[bin]]
name = "I"
path = "src/I.rs"

# ……

[[bin]]
name = "J"
path = "src/J.rs"

[[bin]]
name = "K"
path = "src/K.rs"

[[bin]]
name = "L"
path = "src/L.rs"

[[bin]]
name = "M"
path = "src/M.rs"




[dependencies]
num = "0.4"
rand = "0.8.4"