[package]
name = "lab_2_rust"
version = "0.1.0"
authors = ["donRumata <donrumata03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "A"
path = "src/A.rs"

[[bin]]
name = "B"
path = "src/B.rs"

[[bin]]
name = "C"
path = "src/C.rs"

[[bin]]
name = "D"
path = "src/D.rs"

[[bin]]
name = "D_dequeue"
path = "src/D_dequeue.rs"

[[bin]]
name = "E"
path = "src/E.rs"

[[bin]]
name = "F"
path = "src/F.rs"

[[bin]]
name = "G"
path = "src/G.rs"

[[bin]]
name = "H"
path = "src/H.rs"


[dependencies]

derive_more = "0.6.0"
